# frango

./: .gitignore  Justfile  README.md  flake.nix  pkg.nix  pyproject.toml
.github/workflows/: python-app.yml
etc/: default.toml  frango.toml
frango/: __init__.py  config.py  data_model.py  sql_adaptor.py  table_def.py
frango/client/: __main__.py  cli.py
frango/node/: __main__.py  common.py  consensus.py  node.py  scheduler.py  sql_schedule.py  storage.py
frango/pb/: __init__.py  node.proto
frango/test/: .gitignore  test_sql_adaptor.py  test_sql_schedule.py
nix/rraft-py/: default.nix
sql/: init.sql
