[project]
name = "frango"
version = "0.1.0"
description = ""
authors = [ ]
requires-python = "<4.0,>=3.10"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "loguru>=0.7.2",
    "dataclass-wizard>=0.22.3",
    "rraft-py>=0.2.27",
    "grpcio>=1.64.0",
    "sqlglot>=25.1.0",
]
devDependencies = [
    "grpcio-tools>=1.64.0",
]

[project.scripts]
frango-node = "frango.node:main"
frango-cli = "frango.client.cli:main"

[tool.pdm.scripts]
node = { call = "frango.node:main" }
cli = { call = "frango.client.cli:main" }

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

