[project]
name = "frango"
version = "0.1.0"
description = ""
authors = [ ]
requires-python = "<4.0,>=3.12"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "loguru>=0.7.2",
    "dataclass-wizard>=0.22.2",
    "rraft-py>=0.2.27",
    "grpcio>=1.62.2",
    "sqlglot>=23.12.1",
    "rich>=13.7.1",
]
devDependencies = [
    "grpcio-tools>=1.64.0",
    "types-protobuf>=5.26.0.20240422",
    "mypy>=1.10.0",
    "pytest>=8.2.2",
]

[project.scripts]
frango-node = "frango.node:main"
frango-cli = "frango.client.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.mypy]
python_version = 3.12
overrides = [
    { module = "dataclass_wizard.*", ignore_missing_imports = true },
    { module = "grpc.*", ignore_missing_imports = true },
    { module = "frango.pb.generated.*", disallow_untyped_defs = false },
]

[tool.pdm]
distribution = true

[tool.pdm.scripts]
node = { call = "frango.node:main" }
cli = { call = "frango.client.cli:main" }
test = { cmd = "pytest" }

[tool.pdm.build]
includes = [ "frango/" ]

